# zhihu2obsidian

./: .gitignore  AI_WRITING_ASSISTANT_PRD.md  DEVELOPMENT_PLAN.md  PLAN.md  README.md  index.html  install.sh  sync.js
cli/: pyproject.toml  requirements.txt
cli/tests/: conftest.py  test_cli.py  test_converter.py  test_extension_manifest.py  test_imports.py  test_manifest.py  test_tree_and_analyzer.py
cli/zhihu2obsidian/: __init__.py  __main__.py  api.py  auth.py  config.py  converter.py  images.py  models.py  sync.py
cli/zhihu2obsidian/agent/: checker.py  package.py  retriever.py  writer.py
cli/zhihu2obsidian/knowledge/: __init__.py  cards.py  chunker.py  embedder.py  graph.py  topics.py  wordcloud.py
docs/: FUTURE_DEVELOPMENT.md
extension/: content.js  options.html  options.js  sidebar.css  sidebar.html  sidebar.js
web/: app.py
web/.claude/skills/: developing-with-streamlit
